# bop-pdf

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: Histogram1D.h  ProteinWaterAnalyzer.h  ThreadPool.h  Types.h
scripts/: plot-histos-bop.py
src/: histogram1D.cpp  main.cpp  proteinWaterAnalyzer.cpp  threadPool.cpp
